# limen

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: Dockerfile.lint  dependabot.yml
.github/workflows/: build-vyos-custom-iso.yml  build-vyos-iso.yml  build-vyos.yml  ci-auto-fix.yml  dependabot-auto-merge.yml  lint-workflows.yml  on-failure.yml
docs/: disaster-recovery.md  failure-log-2026-01-07-kernel-update.md  failure-log-2026-01-09-ci-issues.md  github-connection-diagnosis.md  hardware-specs.md  iso-build-initial-config.md  mape-setup-2026-01-12.md  mape-technical-analysis-2026-01-10.md  phase0-install.md  phase1-ssh.md  phase2-ipv6.md  phase3-wireguard.md  phase4-mape-vyos.md  phase4-wxr-routing.md  phase5-operations.md  phase6-backup.md  pikvm-setup.md  reference.md  report-biglobe-ipv6-wxr.md  todo-mape-2026-01-11.md  troubleshooting-dhcpv6-pd.md  troubleshooting-ipv6.md  troubleshooting-mape.md  troubleshooting-ra-missing.md  troubleshooting.md  vm-kernel-test-procedure.md  work-log-2026-01-08.md  work-log-2026-01-09.md  work-log-2026-01-11.md  work-log-2026-01-13.md
pikvm/: README.md
pikvm/docs/: setup.md  (+1 more)
scripts/: README.md  backup-vyos-config.txt  config.yaml.example  diagnose-ipv4.sh  generate-vyos-restore.sh  pre-commit  recovery-vyos-config.sh  setup-mape.env.example  setup-mape.sh  verify_config.sh  vyos-config-template.txt  vyos-restore.env.example  vyos_config.py  vyos_config_check.py  vyos_restore.py  wg_client_config.py
tests/: test_vyos_config.py  test_vyos_restore.py
(+9 files in other folders)
